# blank

./: .gitignore  Makefile  README.md  pyproject.toml
src/blank/: __init__.py  main.py
tests/: __init__.py  test_main.py
