[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blank"
version = "0.1.0"
description = "A blank Python project template with modern tooling"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    { name = "Your Name" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "black>=25.0.0",
    "ruff>=0.14.0",
    "mypy>=1.18.0",
]

[project.scripts]
blank = "blank.main:main"

[tool.black]
line-length = 88
target-version = ['py313']

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.18.2",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]
